--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
       "path": "./node_modules/cz-conventional-changelog-ptbr"
     }
   },
+  "scripts": {
+    "release": "semantic-release --no-ci"
+  },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/git": "^9.0.0",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog-ptbr": "1.0.0",
-    "husky": "^7.0.1"
+    "husky": "^7.0.1",
+    "semantic-release": "^17.4.5"
   }
 }
